# llvm-hs-test

./: simple-example.cabal  stack.yaml
