name:                simple-example
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable simple-example
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , llvm-hs == 9.0.*
                     , llvm-hs-pure == 9.0.*

